added transform to weather icons on homepage

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
 }
 /* home page */
 .homepage-container {
-	margin: 10px 0 40px 0;
+	margin: 10px 0 10px 0;
 }
 .city-overview-container {
 	margin: 15px 10px 20px 10px;
@@ -24,12 +24,27 @@ body {
 	top: -25px;
 	left: -20px;
 	width: 100px;
+	transition: transform 2s;
+  transition-timing-function: ease;
+  z-index: 1;
+}
+.weather-icon:hover {
+  -ms-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 .city-temperature {
 	position: absolute;
 	top: 80px;
 	left: 0;
 	color: #3D5068;
+}
+@media screen and (min-height: 750px) {
+	.homepage-container {
+		height: 90vh;
+	}
 }
 /* weather forecast page */
 .daily-weather-container {
